--- a/demo/testcases/login_demo.yml
+++ b/demo/testcases/login_demo.yml
@@ -1,27 +1,25 @@
 config:
-    name: "这是测试报告"
-    verify: False
+  name: "这是测试报告"
+  verify: False
 
+variables:
+  base_url: "${ENV(BASE_URL)}"
 
 teststeps:
--
-    name: '测试登录接口'
+  - name: '测试登录接口'
     request:
-        method: post
-        headers:
-            Content-Type: "application/x-www-form-urlencoded"
-
-        url: http://127.0.0.1:8000/user/login/
-        body:
-            username: 'LittleSeven'
-            password: 'zm123456'
-
+      method: post
+      headers:
+        Content-Type: "application/x-www-form-urlencoded"
+      url: "${ENV(BASE_URL)}/user/login/"
+      body:
+        username: 'LittleSeven'
+        password: 'zm123456'
     validate:
-#        - eq: ["status_code", 200]
-#        - ge: ['status_code',100]
-#        - contains: ['json','username']
-#        - lt: ["json.user_id", 2]
-        - check: json.user_id
-          assert: lt
-          expect: 2
+      - eq: ["status_code", 200]
+      - check: status_code
+        assert: eq
+        expect: 200
+
+
 
